@@ -30,8 +30,8 @@
     <description>Scalatra REST service example that's used for integration testing rest-assured</description>
 
     <properties>
-        <scala.version>2.8.0</scala.version>
-        <scalatra.version>2.0.0.M1</scalatra.version>
+        <scala.version>2.9.1</scala.version>
+        <scalatra.version>2.0.1</scalatra.version>
     </properties>
 
     <build>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>net.liftweb</groupId>
             <artifactId>lift-json_${scala.version}</artifactId>
-            <version>2.1</version>
+            <version>2.4-M5</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -89,6 +89,11 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
         </dependency>
     </dependencies>
 
